# aarty

./: .codespellignore  .dockerignore  .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  _readme.tpl  _typos.toml  cliff.toml  committed.toml  deny.toml  justfile  ok_ascii.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur-release.yml  check.yml  docker.yml  release.yml  safety.yml  scheduled.yml  test.yml
archpackage/: A  PKGBUILD
archpackage/pkg/aarty/: .BUILDINFO  .MTREE  .PKGINFO
benches/: convert_to_ascii.rs  text_image.rs
src/: args.rs  ascii_processor.rs  color.rs  impl_image.rs  lib.rs  main.rs  output.rs  sympols.rs  text_image.rs
src/sympols/: no_ref_impl.rs  ref_impl.rs
