[package]
name = "aarty"
version = "0.6.1"
edition = "2021"
rust-version = "1.65"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "Mini-framework to display pictures on your terminal"
repository = "https://github.com/0x61nas/aarty"
license = "MIT"
readme = "README.md"
autobins = false
keywords = [
    "ascii",
    "art",
    "image",
    "pictures"
]
categories = [
    "command-line-utilities",
    "multimedia",
    "text-processing"
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]


[[bin]]
name = "aarty"
path = "src/bin/main.rs"
required-features = ["image", "colors"]

[dependencies]
image = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# transitive dependencies
rayon = { version = ">=1.1", optional = true }
cfg-if = { version = ">=0.1.2", optional = true }

[features]
default = ["colors", "reverse", "image", "text_image"]
colors = []
image = ["dep:image", "rayon", "cfg-if"]
reverse = []
serde = ["dep:serde"]
text_image = []
