[package]
name = "aarty"
version = "0.7.0-alpha.5"
edition = "2021"
rust-version = "1.70"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "Mini-framework to display pictures on your terminal"
repository = "https://github.com/0x61nas/aarty"
license = "MIT"
readme = "README.md"
autobins = false
keywords = [
    "ascii",
    "art",
    "image",
    "pictures"
]
categories = [
    "command-line-utilities",
    "multimedia",
    "text-processing"
]
include = [
    "src/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]


[[bin]]
name = "aarty"
path = "src/bin/main.rs"
required-features = ["image", "colors"]

[[bench]]
name = "text_image"
harness = false
required-features = ["text_image", "image"]

[[bench]]
name = "convert_to_ascii"
harness = false
required-features = ["image"]

[dependencies]
image = { version = "0.25", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# transitive dependencies
rayon = { version = ">=1.1", optional = true }
cfg-if = { version = ">=0.1.2", optional = true }

[features]
default = ["colors", "reverse", "image", "text_image"]
colors = []
image = ["dep:image", "rayon", "cfg-if"]
reverse = []
serde = ["dep:serde"]
text_image = []

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1
